working on mongo/netlify connection

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Image Factory</title>
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -17,16 +17,16 @@
         </a>
     </div>
     <div class="details">
-        <p id="image-details">Photo by <a href="#" id="creator">Name</a> on
-            <a href="https://www.unsplash.com">Unsplash</a>
+        <p id="image-details">Photo by <a href="#" id="creator">Name</a>
         </p>
     </div>
     <div class="buttons-div">
         <button id="next-btn">Next Image</button>
         <button id="save-btn">Save Image</button>
+        <button id="gallery-btn">Saved Gallery</button>
     </div>
 
-    <script src="./public/javascript/randomImg.js"></script>
+    <script src="../javascript/randomImg.js"></script>
 </body>
 
 </html>
